# streamlit_app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
src/core/: chat_ReAct_agent.py  chat_deep_research.py  chat_default.py  chat_grd_w_gg.py  chat_search_agent.py
src/pages/: chat.py  dashboard.py  search.py
src/ui_components/: chat_interface.py  sidebar.py
src/utils/: chat_callbacks.py  chat_utils.py  ddg_utils.py  helper.py  history_manager.py  js_utils.py  logger.py  serper_utils.py  streamlit_utils.py
tests/: test_core.py
