[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio-client>=1.8.0",
    "openai>=1.69.0",
    "openai-agents>=0.0.7",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "streamlit>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
